[gd_scene load_steps=3 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/logo-sly-branca.png" type="Texture" id=2]

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 656.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 20.0
margin_right = 1012.0
margin_bottom = 636.0
size_flags_horizontal = 4
custom_constants/separation = 16
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 1012.0
margin_bottom = 556.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 572.0
margin_right = 1012.0
margin_bottom = 586.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Metroidvania"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 485.0
margin_top = 572.0
margin_right = 526.0
margin_bottom = 616.0
size_flags_horizontal = 4
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 41.0
margin_bottom = 20.0
text = "Start"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 41.0
margin_bottom = 44.0
text = "Exit"
__meta__ = {
"_edit_group_": true
}
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
